Bug 346176 - Custom colors are not applied until restart
Summary: Custom colors are not applied until restart
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: 15.08
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks: kdepim-15.08
  Show dependency treegraph
 
Reported: 2015-04-14 15:12 UTC by Daniel Vrátil
Modified: 2015-07-04 12:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Vrátil 2015-04-14 15:12:41 UTC
Go to Settings -> Configure KMail -> Appearance -> Colors, then toggle Custom colors and change some color and click Apply

Actual result:
The message list is reloaded, but new color settings is not applied

Expected result:
New color settings is applied.
Comment 1 Laurent Montel 2015-04-15 05:58:29 UTC
It works fine here.
I will continue to investigate it.
Comment 2 Laurent Montel 2015-07-04 12:29:03 UTC
I confirm that is a bug which doesn't reparse config.
I will investigate it
Comment 3 Laurent Montel 2015-07-04 12:50:01 UTC
Git commit ae2c8d6b5cc4ddac5cf0355fe51fa924c7278ebf by Montel Laurent.
Committed on 04/07/2015 at 12:49.
Pushed by mlaurent into branch 'master'.

Fix Bug 346176 - Custom colors are not applied until restart

M  +10   -0    kmail/kmkernel.cpp

http://commits.kde.org/kdepim/ae2c8d6b5cc4ddac5cf0355fe51fa924c7278ebf