Fix Bug 346176 - Custom colors are not applied until restart

BUG: 346176